--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
 				<button class='botao' >EMO 3</button>
 				<button class='botao' >EMO 4</button>
 				<button class='botao' >EMO 5</button>
+				
+				<label class="picture" tabindex="0">
+					<input type="file" accept="image/*" class="picture-input"/>
+					<span>+</span>
+				</label>
 			</div>
 		</div>
 		
 		<div id='imagem-emo'>
-			<img src='imagens/emoboy.jpg' id='imagens'>
+			<img src='imagens/emoboy.jpg' id='imagens' alt="Imagens">
 		</div>
 	    
 		<script src="scripts/emo.js">
