--- a/emosup..html
+++ b/emosup..html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header id="header">
-        <h2>Emo Supremo</h2>
+        <h2>Emo Supremoag</h2>
         <a><div class="button">Voltar</div></a>
     </header>
     <main id="content">
